# PrintEasy

./: .gitignore  README.md  docker-compose.yml
client/: README.md  esp32_mqtt_printer.ino
clients/: README.md
clients/esp32-arduino/: README.md  esp32_mqtt_printer.ino
clients/esp8266-arduino/: README.md  esp8266_mqtt_serial_printer.ino
clients/linux-python/: README.md  pair-bluetooth.sh  printeasy-client.env.example  printeasy-client.service  printeasy_client.py  setup.sh
clients/pico-w/: CMakeLists.txt  README.md
clients/pico-w/include/: btstack_config.h  lwipopts.h  mbedtls_config.h  mqtt_ca_cert.h.in
clients/pico-w/src/: printeasy_pico.c
clients/protocol/: README.md
mosquitto/: mosquitto.conf
server/: .env.example  Dockerfile  README.md  app.js  package-lock.json  package.json
